[project]
name = "acadia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=1.0.0a4",
    "langfuse>=3.6.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
